# TASE

./: .env  .env_sample  .gitignore  LICENSE  README.md  chromusic.py  docker-compose.yml  mapping.py  pyproject.toml  requirements.txt  sample_tase.json  tase.py
.github/ISSUE_TEMPLATE/: bug_report.md
aioarango/: __init__.py  client.py  typings.py  utils.py
aioarango/api/: __init__.py  api_endpoint.py  aql.py  cursor.py  database.py  graph.py
aioarango/api/collection/: __init__.py  base_collection.py  edge_collection.py  standard_collection.py  vertex_collection.py
aioarango/api/database/: __init__.py  database.py  standard_database.py
aioarango/api_methods/: __init__.py
aioarango/api_methods/analyzers/: __init__.py
aioarango/api_methods/aql/: __init__.py  change_aql_query_tracking_properties.py  clear_slow_aql_queries.py  create_user_aql_function.py  delete_user_aql_function.py  explain_aql_query.py  get_all_aql_query_optimizer_rules.py  get_aql_query_tracking_properties.py  get_running_aql_queries.py  get_slow_aql_queries.py  get_user_registered_aql_functions.py  kill_running_aql_query.py  parse_aql_query.py
aioarango/api_methods/backup_restore/: __init__.py
aioarango/api_methods/bulk/: __init__.py
aioarango/api_methods/cluster/: __init__.py
aioarango/api_methods/collections/: __init__.py  change_collection_properties.py  compact_collection_data.py  create_collection.py  drop_collection.py  get_collection_checksum.py  get_collection_document_count.py  get_collection_revision.py  get_collection_shard_ids.py  get_collection_statistics.py  read_all_collections.py  (+7 more)
aioarango/connection/: __init__.py  base_connection.py  basic_connection.py
aioarango/enums/: __init__.py  api_context_type.py  aql_cache_mode.py  aql_query_state.py  collection_status.py  collection_type.py  compression_type.py  compute_on_type.py  connection_type.py  error_source.py  host_resolver_type.py  index_type.py  inverted_index_features_type.py  key_options_type.py  method_type.py  overwrite_mode.py  sharding_method.py  sharding_strategy.py  sort_type.py
aioarango/errors/: __init__.py  arango_server_error.py  error_.py  error_ref.py  error_type.py  unknown_error.py
aioarango/executor/: __init__.py  async_api_executor.py  base_api_executor.py  batch_api_executor.py  default_api_executor.py  transaction_api_executor.py
aioarango/http/: __init__.py  base_http_client.py  default_http_client.py
aioarango/http_client/: __init__.py  base_http_client.py  default_http_client.py
aioarango/methods/: __init__.py
aioarango/models/: __init__.py  aql_cache_properties.py  aql_query.py  aql_query_cache_entry.py  aql_tracking_data.py  arango_collection.py  collection_figures.py  collection_shard_info.py  computed_value.py  cursor_stats.py  database_info.py  edge_definition.py  graph.py  graph_info.py  key_options.py  key_options_input.py  query_optimizer_rule.py  request.py  response.py  user.py
aioarango/resolver/: __init__.py  base_resolver.py  random_host_resolver.py  round_robin_resolver.py  single_host_resolver.py
aioarango/utils/: aql_utils.py  document_utils.py  generic.py  graph_utils.py
index/: analyzer.py  dataGenerator.py
languages/: english.py  persian.py
locales/: tase.pot
static/: emoji.py
tase/: __init__.py  globals.py  my_logger.py  rabbimq_consumer.py  tase_client.py  tase_globals.py  task_globals.py  template_globals.py  utils.py
tase/common/: bot_tasks_checker.py  mime_types_file  patterns.py  preprocessing.py  utils.py
tase/configs/: __init__.py  arangodb_config.py  archive_channel_info.py  base_config.py  client_config.py  elastic_config.py  pyrogram_config.py  tase_config.py
tase/db/: __init__.py  database_client.py  db_utils.py  document_db.py  elasticsearch_client.py  elasticsearch_db.py  graph_db.py
tase/errors/: __init__.py  audio_not_in_playlist.py  audio_vertex_does_not_exists.py  edge_creation_failed.py  edge_deletion_failed.py  hit_does_not_exists.py  hit_no_linked_audio.py  hit_no_linked_playlist.py  invalid_audio_for_inline_mode.py  invalid_from_vertex.py  invalid_to_vertex.py  not_base_collection_document_instance.py  not_enough_ram_error.py  not_soft_deletable_subclass.py  null_chat_type.py  null_telegram_inline_query.py  param_not_provided.py  playlist_does_not_exists.py  playlist_not_found.py  tase_error.py  telegram_message_with_no_audio.py  update_retry_count_failed.py  user_does_not_has_playlist.py
tase/languages/: __init__.py  base_language.py  languages.py
tase/models/: __init__.py  telegram_client.py
tase/scheduler/: __init__.py  scheduler.py
tase/static/: __init__.py  emoji.py
tase/task_distribution/: __init__.py  base_task.py  shutdown_task.py  target_worker_type.py  task_globals.py  task_type.py
tase/telegram/: __init__.py  channel_analyzer.py  client_manager.py  client_worker.py  globals.py  inline_buton_globals.py  scheduler.py  telegram_client.py  template_globals.py
tase/templates/: __init__.py  audio_caption_template.py  base.py  choose_language_template.py  help_template.py  no_results_were_found_template.py  query_results_template.py  welcome_template.py
(+897 files in other folders)
